# chip

./: .gitignore  CMakeLists.txt  README.md  build.sbt
sim/: CMakeLists.txt  Makefile  matrix_multiplier_sim.cpp  test_matrix_multiplier.cpp
src/main/scala/: Elaborate.scala  MatrixMultiplier.scala
